# rathena-AI-world

./: .env.example  .gitignore  ARCHITECTURE_HYBRID_P2P_MMO.md  README.md  build.sh  start-services.sh
conf/: ai_agents.conf  ai_legends.conf
conf/p2p/: host_node.conf  network_quality.conf  p2p.conf
doc/: BUILD_INSTRUCTIONS.md  BUILD_PREREQUISITES.md  DEPENDENCIES.md  QUICKSTART.md  QUICKSTART_BUILD.md  database_structure.md  development.md  geographic_deployment.md  monitoring_setup.md  network_config_management.md  network_monitoring_setup.md  network_quality_testing.md  p2p_hosting_implementation.md  p2p_monitoring.md  p2p_security.md  p2p_system_overview.md
docs/: AI_BEGGAR.md  AI_GAME_MECHANICS_INTEGRATION.md  AI_IMPLEMENTATION_SUMMARY.md  AI_LEGENDS.md  AI_LEGENDS_PROFILES.md  ANTI_CHEAT_SYSTEM.md  CLIENT_QUICKSTART.md  CLIENT_QUICKSTART_SIMPLIFIED.md  CLIENT_SECURITY_P2P.md  CLIENT_UPDATES.md  CLIENT_UPDATES_SIMPLIFIED.md  P2P_TECHNICAL_IMPLEMENTATION.md  SERVER_SIDE_IMPLEMENTATION.md
npc/custom/quests/: hunting_missions.txt
p2p-coordinator/tests/e2e/: test_p2p_dll_integration.py
p2p-coordinator/tests/integration/: test_websocket_signaling.py
p2p-coordinator/tests/unit/: test_background_tasks.py  test_final_coverage_push.py  test_signaling.py
patches/: 0001-Add-AI-system-integration.patch
sql/: p2p_schema.sql
sql-files/: ai_legends.sql
src/ai/: AISystemManager.cpp  AISystemManager.hpp  CMakeLists.txt  ai_module.hpp  ai_system.pc.in
src/ai/agents/: ai_beggar_agent.cpp  ai_beggar_agent.hpp  ai_legends_agent.hpp  legend_bloodlines_agent.hpp
src/ai/common/: ai_agent.hpp  ai_agent_base.cpp  ai_agent_base.hpp  ai_config.cpp  ai_config.hpp  ai_provider.hpp  ai_request.hpp  ai_response.hpp  ai_types.hpp
src/ai/context/: CMakeLists.txt  ContextManager.cpp  ContextManager.hpp  LangChainChains.hpp  LangChainMemory.hpp
src/ai/context/langchain/: base.hpp  chain.hpp  memory.hpp  schema.hpp
src/ai/memory/: MemoryManager.hpp  ai_memory.hpp
src/ai/model/: AIModel.hpp  AIModelManager.hpp
src/ai/providers/: openai_provider.hpp
src/aiworld/: CMakeLists.txt  admin_handler.cpp  admin_handler.hpp  aiworld_plugin.cpp  aiworld_plugin.hpp  aiworld_server.cpp  config_loader.cpp  config_loader.hpp  entity_logic.cpp  entity_logic.hpp  event_logic.cpp  event_logic.hpp  mission_logic.cpp  mission_logic.hpp  postgres_manager.cpp  postgres_manager.hpp
src/aiworld/tests/: CMakeLists.txt  test_admin_handler.cpp  test_config_loader.cpp  test_entity_logic.cpp  test_event_logic.cpp  test_mission_logic.cpp  test_postgres_manager.cpp
src/common/: CMakeLists.txt  arena_allocator.cpp  arena_allocator.hpp  arena_allocator_test.cpp  entity_simulation_worker.cpp  entity_simulation_worker.hpp  entity_state.hpp  http_client.hpp  network_security.hpp  p2p_data_sync.hpp  p2p_runtime_flags.cpp  p2p_runtime_flags.hpp  p2p_runtime_flags_atomic_commit_test.cpp  p2p_runtime_flags_compat_test.cpp  p2p_runtime_flags_test.cpp  test_all.sh  worker_pool.cpp  worker_pool.hpp
src/map/: ai_integration.hpp
src/p2p/: CMakeLists.txt
src/p2p-coordinator/: README.md  dht_manager.cpp  dht_manager.hpp  dragonfly_client.cpp  dragonfly_client.hpp  entity_simulation_worker.cpp  entity_simulation_worker.hpp  metrics_exporter.cpp  metrics_exporter.hpp  p2p_coordinator.cpp  p2p_coordinator.hpp  p2p_mesh_manager.cpp  p2p_mesh_manager.hpp  protocol_handler.cpp  protocol_handler.hpp  protocol_server.cpp  protocol_server.hpp  security_manager.cpp  security_manager.hpp  worker_pool.cpp  worker_pool.hpp
src/p2p-coordinator/config/: p2p_coordinator.conf
src/p2p/common/: ConfigManager.cpp  ConfigManager.hpp  NetworkConfig.cpp  NetworkConfig.hpp  crypt.hpp  network.cpp  network.hpp  security.hpp  types.hpp
src/p2p/coordinator/: CoordinatorServer.cpp  CoordinatorServer.hpp  DatabaseProxy.cpp  DatabaseProxy.hpp  DocumentedQuery.cpp  DocumentedQuery.hpp  HostManager.cpp  HostManager.hpp  MapDistributor.cpp  MapDistributor.hpp  QueryDefinitions.cpp  RealTimeSync.cpp  SecureDatabaseSync.cpp  SecureDatabaseSync.hpp  SecureQueryTemplate.cpp
src/p2p/map/: MapInstance.cpp  MapInstance.hpp  P2PMapServer.cpp  P2PMapServer.hpp
src/web/: ai_bridge_controller.cpp
tests/: CMakeLists.txt  README.md  test_config.hpp.in
tests/ai/: AISystemTests.cpp  AISystemTests.hpp
tests/data/: memories.json  prompts.json  responses.json
tests/p2p/: SecureQueryTemplateTest.cpp
tools/: CMakeLists.txt  README.md  ai_monitor.sh  ai_status.sh  check_network_config.sh  client_update_config.json  client_update_config_simplified.json  test_agent.sh  update_client.bat  update_client.py  update_client.sh  update_client_simplified.bat  update_client_simplified.py  update_client_simplified.sh  validate_network_config.cpp
tools/configs/: ai_client.ini  ai_mapping.ini
tools/dlls/: README.md
